Added filed "active" for account